# UML-Diagram

./: CMakeLists.txt  ConnectionPoint.cpp  ConnectionPoint.h  Diagram.cpp  Diagram.h  DiagramElement.cpp  DiagramElement.h  DragObject.cpp  DragObject.h  DrawElements.h  ElementText.cpp  ElementText.h  ElementText.ui  Generator.cpp  Generator.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Python.cpp  Python.h  ToolBox.cpp  ToolBox.h  ToolBoxModel.cpp  ToolBoxModel.h  Utils.h
cereal/doc/: DoxygenLayout.xml
cereal/include/cereal/: access.hpp  cereal.hpp  macros.hpp  specialize.hpp
cereal/include/cereal/details/: helpers.hpp  static_object.hpp  traits.hpp
cereal/include/cereal/types/: base_class.hpp  common.hpp
